# mnml-msg-gmail

./: Cargo.toml  README.md
src/: app.rs  auth.rs  config.rs  gmail.rs  keys.rs  main.rs  ui.rs
